--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <!------------------------------------------------- ini adalah bagian home ----------------------------------------->
     <section class="home">
-      <div class="container pt-2 mb-4 bg bg-warning ">
+      <div id="divhome" class="container pt-2 mb-4 bg bg-warning ">
         <div class="home-box d-flex align-items-center justify-content-between flex-md-row flex-column gap-md-0 gap-5">
           <div class="  animate__animated animate__fadeInLeft box">
             <h1 class="fw-bold pt-4 mb-3"> Muh. Ali A</h1>
