--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 <nav id="navbar" class=  "animate__animated animate__fadeInDown navbar navbar-expand-lg bg-warning py-3 fixed-top">
   <div class="container  ">
     <a class="navbar-brand" href="#">
-      <img src="./assets/icon/nm.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top rounded" />
-      <span class="fw-bold text-black"> ngoding </span>
+      <span class="fw-bold text-black"> Web Portofolio </span>
     </a>
     <button class="bg-black shadow-none navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -73,7 +72,7 @@
               <a href="#projects" class="btn btn-outline-dark"> our project</a>
             </div>
           </div>
-          <div class="  animate__animated animate__fadeInRight box">
+          <div class="   animate__animated animate__fadeInRight box">
           </div>
         </div>
       </div>
@@ -155,9 +154,9 @@ Tujuan saya adalah menjadi seorang profesional IT yang tidak hanya paham teknis,
     </h2>
     <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse " >
       <div class="accordion-body">
-      <h4>Futsal</h4>
-      <h4>Bulutangkis</h4>
-      <h4>Berenang</h4>
+      <strong> Futsal <br>
+      Bulutangkis <br>
+      Berenang</strong>
 
       </div>
     </div>
@@ -214,21 +213,20 @@ Tujuan saya adalah menjadi seorang profesional IT yang tidak hanya paham teknis,
 
           <div class="row justify-content-center pt-4 gap-2">
             <div class="colprojects1 col-md-5 col-12 shadow p-3 rounded" data-aos="flip-down" data-aos-duration="2000">
-            <img src="./assets/images/projek1.webp" alt="Project Image" width="100%" />
-            <h4 class="pt-4">Website portpfoip</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat iste accusamus pariatur in? Earum corrupti odio distinctio ab dolores quis?</p>
+            <h4 class="pt-4">Website To Do List</h4>
+            <p>Website ini di gunakan untuk menulis apa apa saja kegiatan yang ingin dilakukan</p>
             <div>
-              <a href="" class="btn btn-dark">github</a>
-              <a href="" class="btn btn-warning">View Website</a>
+              <a href="https://github.com/mhmmadaliii/todolist.git" class="btn btn-dark">github</a>
+              <a href="https://mhmmadaliii.github.io/todolist/" class="btn btn-warning">View Website</a>
             </div>
           </div>
            <div class="colprojects2 col-md-5 col-12 shadow p-3 rounded" data-aos="flip-down" data-aos-duration="2000">
-            <img src="./assets/images/projek1.webp" alt="Project Image" width="100%"/>
-            <h4 class="pt-4">Website portpfoip</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat iste accusamus pariatur in? Earum corrupti odio distinctio ab dolores quis?</p>
+          
+            <h4 class="pt-4">Website Kalkulator</h4>
+            <p>Web ini digunakan untuk perhitungan</p><br>
             <div>
-              <a href="" class="btn btn-dark">github</a>
-              <a href="" class="btn btn-warning">View Website</a>
+              <a href="https://github.com/mhmmadaliii/webkalkulator.git" class="btn btn-dark">github</a>
+              <a href="https://mhmmadaliii.github.io/webkalkulator/" class="btn btn-warning">View Website</a>
             </div>
           </div>
            
@@ -246,11 +244,14 @@ Tujuan saya adalah menjadi seorang profesional IT yang tidak hanya paham teknis,
 <footer class="bg-dark text-white text-center py-4">
   <div class="container">
     <p class="mb-2">Hubungi saya:</p>
-    <a href="https://wa.me/6281234567890" target="_blank" class="btn btn-warning me-2">
+    <a href="https://wa.me/6281234567890" target="_blank" class="btn btn-warning">
       <i class="bi bi-whatsapp"></i> WhatsApp
     </a>
-    <a href="https://instagram.com/nama_akun_ig" target="_blank" class="btn btn-warning">
+    <a href="https://instagram.com/nmhmmad.aliii" target="_blank" class="btn btn-warning">
       <i class="bi bi-instagram"></i> Instagram
+    </a>
+        <a href="https://instagram.com/nama_akun_ig" target="_blank" class="btn btn-warning">
+      <i class="bi bi-github"></i> GitHub
     </a>
   </div>
 </footer>
