--- a/index.html
+++ b/index.html
@@ -104,66 +104,52 @@ Tujuan saya adalah menjadi seorang profesional IT yang tidak hanya paham teknis,
 
 
 <!------------------------------------------------- ini adalah bagian profile ----------------------------------------->
-       <section class="profile">
-        <div class="conntainer px-5 pt-5 py-3 tentangsaya-box text-center"   id="profile">
+        <section class="profile">
+        <div class="conntainer px-5 pt-5 py-3 tentangsaya-box text-center"    id="profile">
             <div class="data diri-box" >
                 <h1 class="fw-bold mb-5 pt-5  text-center"  data-aos="fade-up" data-aos-duration="2000">Profile</h1>
-                <div class="accordion pt-4" id="accordionPanelsStayOpenExample">
-                <div class="row">
-                    <div class="col">
-                        <div class="accordion-item">
-    <h2 class="accordion-header " data-aos="fade-up" data-aos-duration="2000" >
-      <button class="accordion-button bg-warning text-black fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-       Data Diri
+             <div class="accordion accordion-flush" id="accordionFlushExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class=  "  bg-warning accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" data-aos="fade-left" data-aos-duration="2000">
+        <strong> Diri</strong>
       </button>
     </h2>
-    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse " >
-      <div class="accordion-body">
-      Nama Lengkap :<strong> Muh. Ali A</strong> <br> <br>
+    <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body"> Nama Lengkap :<strong> Muh. Ali A</strong> <br> <br>
       Tempat Tanggal Lahir : <strong> Desember 2005 Ujung Pandang</strong> <br> <br>
       Umur : <strong>20</strong> <br> <br>
       Alamat Domisili : <strong> Selatan, Makassar, Maros</strong> <br> <br>
-      Agama : <strong>ISlam</strong> <br> <br>
+      Agama : <strong>Islam</strong> <br> <br>
       Email :<strong>ali@gmail.com</strong>
-
-      </div>
+</div>
     </div>
   </div>
-
-   <div class="accordion-item">
-    <h2 class="accordion-header " data-aos="fade-up" data-aos-duration="2000" >
-      <button class="accordion-button bg-warning text-black fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-       Riwayat Pendidikan
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class=" bg-warning accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" data-aos="fade-right" data-aos-duration="2000">
+       <strong> Riwayat Pendidikan</strong>
       </button>
     </h2>
-    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse " >
-      <div class="accordion-body">
-      2011 - 2017 :<strong> SDN 18 Belang Belang</strong> <br> <br>
+    <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body"> 2011 - 2017 :<strong> SDN 18 Belang Belang</strong> <br> <br>
       2017 - 2020 : <strong> MTSN 1 Maros</strong> <br> <br>
-      2020- 2024 <strong>SMKN 1 Maros</strong> <br> <br>
-
-      </div>
+      2020- 2024 <strong>SMKN 1 Maros</strong> <br> <br></div>
     </div>
-  </div>  
-
-   <div class="accordion-item">
-    <h2 class="accordion-header " data-aos="fade-up" data-aos-duration="2000" >
-      <button class="accordion-button bg-warning text-black fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-       Hobi
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class=" bg-warning accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree" data-aos="fade-left" data-aos-duration="2000">
+        <strong>Hobi</strong>
       </button>
     </h2>
-    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse " >
-      <div class="accordion-body">
-      <strong> Futsal <br>
-      Bulutangkis <br>
-      Berenang</strong>
-
-      </div>
+    <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body"> <strong> Futsal <br><br>
+      Bulutangkis <br><br>
+      Berenang</strong></div>
     </div>
-  </div>  
-     </div>  
-     </div>  
-    </div>      
+  </div>
+</div>     
     </div>
             </div>
 
